--- a/styles.css
+++ b/styles.css
@@ -49,4 +49,14 @@ h1{
 }
 
 
+.scoreBoard{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
 
+.p1,.p2{
+  margin:2em;
+
+}
